--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       </div>
       <section
         id="about"
-        style="padding-top: 100px; padding-bottom: 100px"
+        style="padding-top: 100px; padding-bottom: 30px"
         class="section"
       >
         <div class="absolute-bottom-arrow">
@@ -609,7 +609,7 @@
           </div>
         </div>
       </section>
-      <section class="section make-overflow">
+      <section style="padding-top: 0px" class="section make-overflow">
         <div class="container">
           <div>
             <div class="main-grid">
